# rtdsync

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/rtd/: chan.h  ringbuf.h  time.h  waitgroup.h
test/: CMakeLists.txt  test_chan.cpp  test_ringbuf.cpp  test_tick.cpp  test_waitgroup.cpp
